Add tests for new events