@@ -1,5 +1,6 @@
 package uk.gov.hmcts.divorce.citizen.event;
 
+import io.micrometer.common.util.StringUtils;
 import jakarta.servlet.http.HttpServletRequest;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
@@ -10,7 +11,6 @@ import uk.gov.hmcts.ccd.sdk.api.CaseDetails;
 import uk.gov.hmcts.ccd.sdk.api.ConfigBuilder;
 import uk.gov.hmcts.ccd.sdk.api.callback.AboutToStartOrSubmitResponse;
 import uk.gov.hmcts.ccd.sdk.type.ListValue;
-import uk.gov.hmcts.ccd.sdk.type.YesOrNo;
 import uk.gov.hmcts.divorce.common.ccd.PageBuilder;
 import uk.gov.hmcts.divorce.common.service.InterimApplicationSubmissionService;
 import uk.gov.hmcts.divorce.common.service.PaymentValidatorService;
@@ -18,7 +18,6 @@ import uk.gov.hmcts.divorce.divorcecase.model.Applicant;
 import uk.gov.hmcts.divorce.divorcecase.model.CaseData;
 import uk.gov.hmcts.divorce.divorcecase.model.FeeDetails;
 import uk.gov.hmcts.divorce.divorcecase.model.GeneralApplication;
-import uk.gov.hmcts.divorce.divorcecase.model.GeneralParties;
 import uk.gov.hmcts.divorce.divorcecase.model.GeneralReferral;
 import uk.gov.hmcts.divorce.divorcecase.model.GeneralReferralReason;
 import uk.gov.hmcts.divorce.divorcecase.model.GeneralReferralType;
@@ -30,16 +29,14 @@ import uk.gov.hmcts.reform.ccd.client.model.SubmittedCallbackResponse;
 
 import java.time.Clock;
 import java.time.LocalDate;
-import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 
 import static org.springframework.http.HttpHeaders.AUTHORIZATION;
 import static uk.gov.hmcts.divorce.common.ccd.CcdPageConfiguration.NEVER_SHOW;
-import static uk.gov.hmcts.divorce.divorcecase.model.State.AwaitingDocuments;
+import static uk.gov.hmcts.divorce.divorcecase.model.State.AwaitingGeneralApplicationPayment;
 import static uk.gov.hmcts.divorce.divorcecase.model.State.AwaitingGeneralConsideration;
 import static uk.gov.hmcts.divorce.divorcecase.model.State.GeneralApplicationReceived;
-import static uk.gov.hmcts.divorce.divorcecase.model.UserRole.APPLICANT_1_SOLICITOR;
 import static uk.gov.hmcts.divorce.divorcecase.model.UserRole.CASE_WORKER;
 import static uk.gov.hmcts.divorce.divorcecase.model.UserRole.CREATOR;
 import static uk.gov.hmcts.divorce.divorcecase.model.UserRole.JUDGE;
@@ -51,7 +48,7 @@ import static uk.gov.hmcts.divorce.divorcecase.model.access.Permissions.CREATE_R
 @RequiredArgsConstructor
 public class CitizenGeneralApplicationPaymentMade implements CCDConfig<CaseData, State, UserRole> {
 
-    public static final String CITIZEN_GENERAL_APPLICATION_PAYMENT = "citizen-gen-app-payment-made";
+    public static final String CITIZEN_GENERAL_APPLICATION_PAYMENT = "citizen-general-app-payment";
 
     private final Clock clock;
 
@@ -63,48 +60,46 @@ public class CitizenGeneralApplicationPaymentMade implements CCDConfig<CaseData,
 
     private final HttpServletRequest request;
 
-    private static final String GENERAL_APPLICATION_NOT_FOUND = "No general application found that is awaiting payment";
+    private static final String GENERAL_APPLICATION_NOT_FOUND = "No general applications are awaiting payment";
 
     @Override
     public void configure(ConfigBuilder<CaseData, State, UserRole> configBuilder) {
         new PageBuilder(configBuilder
             .event(CITIZEN_GENERAL_APPLICATION_PAYMENT)
-            .forState(GeneralApplicationReceived)
-            .name("Citizen gen app payment made")
-            .description("Citizen gen app payment made")
+            .forStates(AwaitingGeneralApplicationPayment)
+            .name("General application payment")
+            .description("General application payment made")
             .showSummary()
             .showEventNotes()
             .aboutToSubmitCallback(this::aboutToSubmit)
             .submittedCallback(this::submitted)
             .showCondition(NEVER_SHOW)
             .grant(CREATE_READ_UPDATE, CREATOR)
-            .grantHistoryOnly(CASE_WORKER, SUPER_USER, JUDGE, APPLICANT_1_SOLICITOR));
+            .grantHistoryOnly(CASE_WORKER, SUPER_USER, JUDGE));
     }
 
     public AboutToStartOrSubmitResponse<CaseData, State> aboutToSubmit(CaseDetails<CaseData, State> details,
                                                                        CaseDetails<CaseData, State> beforeDetails) {
         long caseId = details.getId();
         CaseData data = details.getData();
-        log.info("{} About to Submit callback invoked for Case Id: {}", CITIZEN_GENERAL_APPLICATION_PAYMENT, details.getId());
+        log.info("{} About to Submit callback invoked for Case Id: {}", CITIZEN_GENERAL_APPLICATION_PAYMENT, caseId);
 
         boolean isApplicant1 = isApplicant1(caseId);
         Applicant applicant = isApplicant1 ? data.getApplicant1() : data.getApplicant2();
         Optional<GeneralApplication> generalAppOptional = findActiveGeneralApplication(data, applicant);
 
         if (generalAppOptional.isEmpty()) {
-            log.info(
-                "Failed to find active general application to record payment against for {} on Case Id: {}",
-                isApplicant1 ? "Applicant 1" : "Respondent", caseId
-            );
+            log.info("Failed to find ongoing {} general application for payment on Case Id: {}",
+                isApplicant1 ? "Applicant 1" : "Respondent/Applicant2", caseId);
 
             return AboutToStartOrSubmitResponse.<CaseData, State>builder()
-                .errors(Collections.singletonList(GENERAL_APPLICATION_NOT_FOUND))
+                .errors(List.of(GENERAL_APPLICATION_NOT_FOUND))
                 .build();
         }
 
         GeneralApplication generalApplication = generalAppOptional.get();
+        List<ListValue<Payment>> payments = applicant.getGeneralAppPayments();
 
-        List<ListValue<Payment>> payments = applicant.getGenApplicationPayments();
         List<String> validationErrors = paymentValidatorService.validatePayments(payments, caseId);
         if (CollectionUtils.isNotEmpty(validationErrors)) {
             return AboutToStartOrSubmitResponse.<CaseData, State>builder()
@@ -112,14 +107,16 @@ public class CitizenGeneralApplicationPaymentMade implements CCDConfig<CaseData,
                     .build();
         }
 
-        savePaymentDetails(payments, generalApplication, applicant);
+        String paymentReference = paymentValidatorService.getLastPayment(payments).getReference();
+        generalApplication.recordPayment(paymentReference, LocalDate.now(clock));
+        applicant.setOngoingGeneralApplication(null);
 
-        boolean isAwaitingDocuments = YesOrNo.NO.equals(generalApplication.getGeneralApplicationDocsUploadedPreSubmission());
-        boolean notReadyForAutomaticReferral = isGeneralReferralInProgress(data.getGeneralReferral()) || isAwaitingDocuments;
-        if (notReadyForAutomaticReferral) {
-            details.setState(isAwaitingDocuments ? AwaitingDocuments : GeneralApplicationReceived);
+        if (hasGeneralReferralInProgress(data.getGeneralReferral())) {
+            details.setState(GeneralApplicationReceived);
         } else {
-            data.setGeneralReferral(buildGeneralReferral(generalApplication, isApplicant1));
+            GeneralReferral automaticReferral = buildGeneralReferral(generalApplication);
+            data.setGeneralReferral(automaticReferral);
+
             details.setState(AwaitingGeneralConsideration);
         }
 
@@ -153,52 +150,35 @@ public class CitizenGeneralApplicationPaymentMade implements CCDConfig<CaseData,
     }
 
     private Optional<GeneralApplication> findActiveGeneralApplication(CaseData caseData, Applicant applicant) {
-        if (CollectionUtils.isEmpty(caseData.getGeneralApplications())) {
+        String serviceRequest = applicant.getGeneralAppServiceRequest();
+
+        if (CollectionUtils.isEmpty(caseData.getGeneralApplications()) || StringUtils.isBlank(serviceRequest)) {
             return Optional.empty();
         }
 
-        String serviceRequest = applicant.getGeneralApplicationServiceRequest();
-
         return caseData.getGeneralApplications().stream()
             .map(ListValue::getValue)
-            .filter(generalApplication ->
-                isActiveGeneralApplication(generalApplication, serviceRequest)
-            ).findFirst();
+            .filter(application -> isActiveGeneralApplication(application, serviceRequest))
+            .findFirst();
     }
 
-    private boolean isActiveGeneralApplication(
-        GeneralApplication generalApplication, String expectedServiceRequest
-    ) {
+    private boolean isActiveGeneralApplication(GeneralApplication generalApplication, String serviceRequest) {
         FeeDetails applicationFee = generalApplication.getGeneralApplicationFee();
 
         return applicationFee != null && applicationFee.getServiceRequestReference() != null
-            && expectedServiceRequest.equals(applicationFee.getServiceRequestReference());
+            && serviceRequest.equals(applicationFee.getServiceRequestReference());
     }
 
-    private void savePaymentDetails(
-        List<ListValue<Payment>> payments,
-        GeneralApplication generalApplication,
-        Applicant applicant)
-    {
-        String paymentReference = paymentValidatorService.getLastPayment(payments).getReference();
-        generalApplication.getGeneralApplicationFee().setPaymentReference(paymentReference);
-        generalApplication.getGeneralApplicationFee().setHasCompletedOnlinePayment(YesOrNo.YES);
-        generalApplication.getGeneralApplicationFee().setDateOfPayment(LocalDate.now(clock));
-        applicant.setGenApplicationPayments(null);
-        applicant.setGeneralApplicationServiceRequest(null);
-        applicant.setGeneralApplicationOrderSummary(null);
-    }
-
-    private boolean isGeneralReferralInProgress(GeneralReferral generalReferral) {
+    private boolean hasGeneralReferralInProgress(GeneralReferral generalReferral) {
         return generalReferral != null && generalReferral.getGeneralReferralType() != null;
     }
 
-    private GeneralReferral buildGeneralReferral(GeneralApplication generalApplication, boolean isApplicant1) {
+    private GeneralReferral buildGeneralReferral(GeneralApplication generalApplication) {
         return GeneralReferral.builder()
             .generalReferralReason(GeneralReferralReason.GENERAL_APPLICATION_REFERRAL)
-            .generalApplicationFrom(isApplicant1 ? GeneralParties.APPLICANT : GeneralParties.RESPONDENT)
+            .generalApplicationFrom(generalApplication.getGeneralApplicationParty())
             .generalApplicationReferralDate(LocalDate.now(clock))
-            .generalApplicationAddedDate(generalApplication.getReceivedGeneralApplicationDate())
+            .generalApplicationAddedDate(generalApplication.getGeneralApplicationReceivedDate())
             .generalReferralType(GeneralReferralType.DISCLOSURE_VIA_DWP)
             .generalReferralFee(generalApplication.getGeneralApplicationFee())
             .build();
